--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,36 @@
-:root {
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-size: 14px;
 }
 
 html,
 body {
   max-width: 100vw;
+  height: 100vh;
 }
 
 body {
+  border: 5px solid;
+  display: flex;
+  justify-content: center;
+}
+
+.mainContainer {
+  border: 2px solid green;
+  height: 100%;
+  width: 90%;
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  .mainContainer {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1025px) {
+.mainContainer {
+  width: 70%;
+}
 }
