--- a/app/components/Navbar/navbar.module.css
+++ b/app/components/Navbar/navbar.module.css
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   border: 2px solid red;
-  padding: 20px;
+  padding: 10px;
+  margin: auto;
 }
 
 .leftSection {
@@ -33,4 +34,16 @@
 
 .blackText {
   color: rgb(0, 0, 0);
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  .nav {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1025px) {
+  .nav {
+    width: 70%;
+  }
 }
