--- a/app/globals.css
+++ b/app/globals.css
@@ -13,14 +13,14 @@ body {
 
 body {
   border: 5px solid;
-  display: flex;
-  justify-content: center;
+
 }
 
 .mainContainer {
   border: 2px solid green;
   height: 100%;
   width: 90%;
+  margin: auto;
 }
 
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
@@ -30,7 +30,7 @@ body {
 }
 
 @media only screen and (min-width: 1025px) {
-.mainContainer {
-  width: 70%;
-}
+  .mainContainer {
+    width: 70%;
+  }
 }
