--- a/app/components/SurveyComponents/SurveyForm/surveyform.module.css
+++ b/app/components/SurveyComponents/SurveyForm/surveyform.module.css
@@ -96,13 +96,36 @@
   color: rgba(18, 178, 226, 0.685);
 }
 .tableDataPointInput,
-.tableDataPointQuestion{
+.tableDataPointQuestion {
   padding: 2px;
 }
 
 .radioInputs {
   cursor: pointer;
   outline-color: rgba(18, 178, 226, 0.685);
+}
+
+.buttonContainer {
+  border: 2px solid blue;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  min-width: 125px;
+  border: none;
+  background-color: rgb(8, 121, 249);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  color: white;
+  padding: 10px 10px;
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 380px) {
