--- a/app/components/SurveyComponents/SurveyForm/surveyform.module.css
+++ b/app/components/SurveyComponents/SurveyForm/surveyform.module.css
@@ -1,22 +1,24 @@
 .formContainer {
-  border: 2px solid;
+  /* border: 2px solid; */
   margin-top: 30px;
+  margin: 30px auto;
 }
 
 .personalDetailsContainer {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   margin-bottom: 10px;
 }
 
 .leftSection {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   width: 100%;
 }
 
 .rightSection {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   flex-direction: column;
+  width: 390px;
 }
 
 .inputs {
@@ -32,17 +34,18 @@
 }
 
 .foodContainer {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   margin-bottom: 10px;
 }
 
 .foodQuestion {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   width: 100%;
 }
 
 .foodOptions {
-  border: 2px solid red;
+  /* border: 2px solid red; */
+  width: 90%;
   display: flex;
   list-style: none;
   justify-content: space-between;
@@ -56,38 +59,43 @@
 }
 
 .activitiesContainer {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   margin-bottom: 10px;
+}
+
+.tableSection {
   overflow: scroll;
 }
 
 .tableInstructions {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   margin-bottom: 10px;
 }
 
 .table {
   border-collapse: collapse;
   font-size: 1.2rem;
+  width: 100%;
 }
 
-.tableHead {
+/* .tableHead {
   margin: 25px 0;
   min-width: 400px;
-}
+} */
 
 .tableHeadings {
   background-color: rgba(199, 200, 201, 0.566);
   border: 1px solid rgba(0, 0, 0, 0.685);
   text-align: center;
-  min-width: 100px;
+  width: 16%;
   font-weight: 500;
   padding: 0px 10px;
 }
 
 .tableDataPointQuestion {
   border: 1px solid rgba(18, 178, 226, 0.685);
-  min-width: 180px;
+  width: 20%;
+  min-width: 100px;
 }
 
 .tableDataPointInput {
@@ -106,7 +114,7 @@
 }
 
 .buttonContainer {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   width: 100%;
   height: 50px;
   display: flex;
@@ -142,17 +150,16 @@
     max-width: 185px;
   }
   .foodOptions {
-    max-width: 300px;
+    max-width: 390px;
   }
-  .activitiesContainer {
+  .tableSection {
     overflow: hidden;
   }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
   .formContainer {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 95%;
+    max-width: 850px;
   }
 }
