--- a/app/globals.css
+++ b/app/globals.css
@@ -8,16 +8,15 @@
 html,
 body {
   max-width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
 
 body {
-  border: 5px solid;
-
+  /* border: 5px solid; */
 }
 
 .mainContainer {
-  border: 2px solid green;
+  /* border: 2px solid green; */
   height: 100%;
   width: 90%;
   margin: auto;
