--- a/app/globals.css
+++ b/app/globals.css
@@ -10,11 +10,11 @@ body {
   max-width: 100vw;
   height: 100%;
 }
-
+ /*
 body {
-  /* border: 5px solid; */
+  border: 5px solid; 
 }
-
+*/
 .mainContainer {
   /* border: 2px solid green; */
   height: 100%;
