--- a/app/components/SurveyComponents/SurveyForm/surveyform.module.css
+++ b/app/components/SurveyComponents/SurveyForm/surveyform.module.css
@@ -58,6 +58,11 @@
   margin: 1px;
 }
 
+.checkboxInputs {
+  cursor: pointer;
+  margin: 0px 2px;
+}
+
 .activitiesContainer {
   /* border: 2px solid blue; */
   margin-bottom: 10px;
