--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@ body {
 }
 */
 .mainContainer {
-  /* border: 2px solid green; */
+  border: 2px solid green;
   height: 100%;
   width: 90%;
   margin: auto;
