--- a/app/components/SurveyComponents/SurveyForm/surveyform.module.css
+++ b/app/components/SurveyComponents/SurveyForm/surveyform.module.css
@@ -1,3 +1,9 @@
+.errorMessage {
+  color: red;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 .formContainer {
   /* border: 2px solid; */
   margin-top: 30px;
@@ -6,7 +12,7 @@
 
 .personalDetailsContainer {
   /* border: 2px solid blue; */
-  margin-bottom: 10px;
+  margin-bottom: 2px;
 }
 
 .leftSection {
