--- a/app/components/SurveyComponents/SurveyForm/surveyform.module.css
+++ b/app/components/SurveyComponents/SurveyForm/surveyform.module.css
@@ -12,7 +12,7 @@
 
 .personalDetailsContainer {
   /* border: 2px solid blue; */
-  margin-bottom: 2px;
+  margin-bottom: 15px;
 }
 
 .leftSection {
@@ -41,7 +41,7 @@
 
 .foodContainer {
   /* border: 2px solid blue; */
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 
 .foodQuestion {
@@ -67,7 +67,22 @@
 .checkboxInputs {
   cursor: pointer;
   margin: 0px 2px;
+  appearance: none;
+  border: 5px solid white;
+  outline: 1px solid rgba(18, 178, 226, 0.685);
 }
+
+.checkboxInputs:checked {
+  appearance: checkbox;
+}
+
+/* .checkboxInputs input[type='radio'] {
+ 
+} */
+
+/* .checkboxInputs input[type='radio'] {
+  outline-color: 1px auto red;
+} */
 
 .activitiesContainer {
   /* border: 2px solid blue; */
@@ -95,18 +110,19 @@
 } */
 
 .tableHeadings {
-  background-color: rgba(199, 200, 201, 0.566);
-  border: 1px solid rgba(0, 0, 0, 0.685);
+  background-color: rgba(165, 165, 165, 0.781);
+  border: 1px solid rgb(0, 0, 0);
   text-align: center;
   width: 16%;
   font-weight: 500;
-  padding: 0px 10px;
+  padding: 5px 10px;
 }
 
 .tableDataPointQuestion {
   border: 1px solid rgba(18, 178, 226, 0.685);
   width: 20%;
   min-width: 100px;
+  padding: 4px;
 }
 
 .tableDataPointInput {
@@ -114,14 +130,15 @@
   text-align: center;
   color: rgba(18, 178, 226, 0.685);
 }
-.tableDataPointInput,
-.tableDataPointQuestion {
-  padding: 2px;
-}
-
 .radioInputs {
   cursor: pointer;
-  outline-color: rgba(18, 178, 226, 0.685);
+  appearance: none;
+  border: 7px solid white;
+  outline: 1px solid rgba(18, 178, 226, 0.685);
+  border-radius: 50%;
+}
+.radioInputs:checked {
+  appearance: normal;
 }
 
 .buttonContainer {
