--- a/app/components/SurveyComponents/SurveyForm/surveyform.module.css
+++ b/app/components/SurveyComponents/SurveyForm/surveyform.module.css
@@ -28,13 +28,15 @@
   padding-left: 20px;
 }
 
-.textInputs {
+.textInputs,
+.dateInput {
   border: 1.5px solid var(--primary-blue);
   padding: 2px;
   margin-bottom: 10px;
   width: 95%;
   max-width: 250px;
   border-radius: 2px;
+  height: 25px;
 }
 
 .foodContainer {
