--- a/app/components/SubmitButton/submitbutton.module.css
+++ b/app/components/SubmitButton/submitbutton.module.css
@@ -11,3 +11,12 @@
   border-radius: 2px;
   cursor: pointer;
 }
+
+.buttonContainer {
+  /* border: 2px solid blue; */
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
